# spln-2223

TP1/: .gitignore  LICENSE  README.md  book.py  pyproject.toml  requirements.txt
TP1/story_analyzer/: __init__.py  archiver.py  book.py  book_analyzer.py  get_book.py  main.py  parser_models.py  spacy_queries.py
TP1/story_analyzer/data/: spacy_models
TP1/story_analyzer/db/: archive
TP1/story_analyzer/tests/: test_archiver.py  test_spacy_queries.py
TP2/: README.md  pyproject.toml
TP2/hshield/: __init__.py  address_shield.py  document_shield.py  main.py  name_shield.py
TP2/hshield/data/: regex_doc.txt
TP2/hshield/modules/: document_shield.py
TP2/hshield/tests/: doc1.txt  doc_test.py  documentos_test.txt  name_test.txt
TP2/src/: main.py  text.txt
TP2/src/modules/: name_shield.py
TPC1/: README.md  medicina.text  medicina_filter.py
TPC2/: README.md  lex.py  lingua_oc.txt  lingua_oc2.txt  medicina_filter.py  medicina_grammar.txt  parsetab.py  yacc.py
TPC3/: README.md  dic.html  dic_concept.py  example.txt  parser.out  parsetab.py  yacc.py
TPC4/: README.md  helpers.py  pyproject.toml  tokenizadorspln.py
TPC4/hpln/: LICENSE  README.md  __init__.py  abreviations.txt  helpers.py  hpln.py  pyproject.toml
TPC5/: README.md  pyproject.toml
TPC5/hpln/: __init__.py  helpers.py  hpln.py
TPC6/: README.md  newspaper.py  np.py
TPC6/images/: banner.ai  hshield.ai
TPC7/: README.md  gensim_test.py  model_harry_metadata.tsv
TPC8/: .model  README.md  Teste.py  cria_modelo.py  resmodel  val.txt
