[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hpln"
authors = [{name = "Henrique Parola", email = "pg50415@alunos.uminho.pt"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/LittleLevi05/spln-2223/tree/main/TPC4"

[projects.scripts]
hpln = "hpln:main"